[gd_scene load_steps=28 format=3 uid="uid://du6qbgqucaqov"]

[ext_resource type="Script" path="res://Scenes/Level/level.gd" id="1_8dp8a"]
[ext_resource type="Texture2D" uid="uid://cilnsjwsrc7pa" path="res://Textures/Bckround_Jeu.png" id="2_tdses"]
[ext_resource type="PackedScene" uid="uid://ba2claihwes2y" path="res://Scenes/Level/Utility/enemy_spawner.tscn" id="4_hxm1k"]
[ext_resource type="PackedScene" uid="uid://dldt0qgjhmxkd" path="res://Scenes/Level/Entities/Player/player.tscn" id="4_joh2i"]
[ext_resource type="PackedScene" uid="uid://bro1o8mstekxh" path="res://Scenes/Level/Entities/Enemy/polarbear.tscn" id="5_87b22"]
[ext_resource type="Script" path="res://Scenes/Level/Utility/spawn_info.gd" id="6_uxld7"]
[ext_resource type="PackedScene" uid="uid://br5mc50blfcah" path="res://Scenes/Level/Entities/Enemy/reindeer.tscn" id="7_g0iqi"]
[ext_resource type="PackedScene" uid="uid://2k5j8m7ei1u" path="res://Scenes/Level/Entities/Enemy/fox.tscn" id="8_g5bc2"]
[ext_resource type="PackedScene" uid="uid://bn23p23ckhmr2" path="res://Scenes/Level/Entities/Enemy/plane.tscn" id="10_t4lvr"]
[ext_resource type="AudioStream" uid="uid://bbufl4r1ou1rw" path="res://Audio/Music/battleThemeA.mp3" id="11_4bope"]
[ext_resource type="Script" path="res://Audio/Music/snd_Music.gd" id="12_rec6w"]
[ext_resource type="Script" path="res://Scenes/Level/_pause_panel.gd" id="13_wvsox"]
[ext_resource type="PackedScene" uid="uid://dpufsaa3ciflg" path="res://Scenes/Level/Entities/Enemy/eagle.tscn" id="14_cr7hq"]
[ext_resource type="PackedScene" uid="uid://b7c7gsdx2rkjm" path="res://Utility/basic_button.tscn" id="14_ykd8y"]
[ext_resource type="PackedScene" uid="uid://cmn57mf6fs5jj" path="res://Scenes/Level/Store/store.tscn" id="15_x8ttt"]
[ext_resource type="FontFile" uid="uid://cb4e8g30xxp5u" path="res://Font/tenderness.otf" id="16_oxa8r"]
[ext_resource type="AudioStream" uid="uid://bnv76nm5171dn" path="res://Audio/SoundEffect/Victory.wav" id="17_mg58d"]
[ext_resource type="AudioStream" uid="uid://ca6physj6mqei" path="res://Audio/SoundEffect/Lose.ogg" id="18_ysp76"]

[sub_resource type="Resource" id="Resource_03m25"]
script = ExtResource("6_uxld7")
time_start = 0
time_end = 30
enemy = ExtResource("5_87b22")
enemy_num = 10
enemy_spawn_delay = 0

[sub_resource type="Resource" id="Resource_ij20a"]
script = ExtResource("6_uxld7")
time_start = 30
time_end = 210
enemy = ExtResource("5_87b22")
enemy_num = 2
enemy_spawn_delay = 0

[sub_resource type="Resource" id="Resource_68oxv"]
script = ExtResource("6_uxld7")
time_start = 60
time_end = 180
enemy = ExtResource("7_g0iqi")
enemy_num = 1
enemy_spawn_delay = 1

[sub_resource type="Resource" id="Resource_l8y0x"]
script = ExtResource("6_uxld7")
time_start = 180
time_end = 210
enemy = ExtResource("8_g5bc2")
enemy_num = 1
enemy_spawn_delay = 2

[sub_resource type="Resource" id="Resource_daq1w"]
script = ExtResource("6_uxld7")
time_start = 210
time_end = 240
enemy = ExtResource("7_g0iqi")
enemy_num = 2
enemy_spawn_delay = 0

[sub_resource type="Resource" id="Resource_0gpiy"]
script = ExtResource("6_uxld7")
time_start = 240
time_end = 270
enemy = ExtResource("8_g5bc2")
enemy_num = 1
enemy_spawn_delay = 0

[sub_resource type="Resource" id="Resource_4teun"]
script = ExtResource("6_uxld7")
time_start = 240
time_end = 240
enemy = ExtResource("14_cr7hq")
enemy_num = 5
enemy_spawn_delay = 0

[sub_resource type="Resource" id="Resource_rx6id"]
script = ExtResource("6_uxld7")
time_start = 270
time_end = 300
enemy = ExtResource("7_g0iqi")
enemy_num = 4
enemy_spawn_delay = 0

[sub_resource type="Resource" id="Resource_t2np8"]
script = ExtResource("6_uxld7")
time_start = 300
time_end = 300
enemy = ExtResource("10_t4lvr")
enemy_num = 1
enemy_spawn_delay = 0

[node name="Level" type="Node2D"]
process_mode = 3
script = ExtResource("1_8dp8a")

[node name="Map" type="Sprite2D" parent="."]
texture_filter = 2
texture_repeat = 2
texture = ExtResource("2_tdses")
region_enabled = true
region_rect = Rect2(-4000, -4000, 4000, 4000)
metadata/_edit_lock_ = true

[node name="EnemySpawner" parent="." instance=ExtResource("4_hxm1k")]
process_mode = 1
spawns = Array[ExtResource("6_uxld7")]([SubResource("Resource_03m25"), SubResource("Resource_ij20a"), SubResource("Resource_68oxv"), SubResource("Resource_l8y0x"), SubResource("Resource_daq1w"), SubResource("Resource_0gpiy"), SubResource("Resource_4teun"), SubResource("Resource_rx6id"), SubResource("Resource_t2np8")])
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("4_joh2i")]

[node name="LootLayer" type="Node2D" parent="." groups=["loot"]]
process_mode = 1
metadata/_edit_lock_ = true

[node name="Sounds" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="snd_Music" type="AudioStreamPlayer" parent="Sounds"]
process_mode = 3
stream = ExtResource("11_4bope")
volume_db = -15.0
autoplay = true
script = ExtResource("12_rec6w")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="LabelTimer" type="Label" parent="GUILayer/GUI"]
layout_mode = 0
offset_left = 280.0
offset_top = 5.0
offset_right = 360.0
offset_bottom = 29.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("16_oxa8r")
theme_override_font_sizes/font_size = 20
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelCoins" type="Label" parent="GUILayer/GUI"]
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 53.0
offset_bottom = 29.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("16_oxa8r")
theme_override_font_sizes/font_size = 20
text = "0 nok"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Store" parent="GUILayer/GUI" instance=ExtResource("15_x8ttt")]

[node name="DeathPanel" type="Panel" parent="GUILayer/GUI"]
process_mode = 2
visible = false
layout_mode = 0
offset_left = 230.0
offset_top = -266.0
offset_right = 430.0
offset_bottom = -16.0

[node name="lbl_Result" type="Label" parent="GUILayer/GUI/DeathPanel"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("16_oxa8r")
text = "Result"
horizontal_alignment = 1
vertical_alignment = 1

[node name="snd_victory" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("17_mg58d")
volume_db = -10.0

[node name="snd_lose" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("18_ysp76")
volume_db = -10.0

[node name="btn_menu" parent="GUILayer/GUI/DeathPanel" instance=ExtResource("14_ykd8y")]
layout_mode = 0
offset_left = 60.0
offset_top = 200.0
offset_right = 140.0
offset_bottom = 230.0
text = "Menu"

[node name="PausePanel" type="Panel" parent="GUILayer/GUI"]
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("13_wvsox")

[node name="CenterContainer" type="CenterContainer" parent="GUILayer/GUI/PausePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FlowContainer" type="FlowContainer" parent="GUILayer/GUI/PausePanel/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="btn_resume" parent="GUILayer/GUI/PausePanel/CenterContainer/FlowContainer" instance=ExtResource("14_ykd8y")]
layout_mode = 2
text = "Resume"

[node name="btn_restart" parent="GUILayer/GUI/PausePanel/CenterContainer/FlowContainer" instance=ExtResource("14_ykd8y")]
layout_mode = 2
text = "Restart"

[node name="btn_exit" parent="GUILayer/GUI/PausePanel/CenterContainer/FlowContainer" instance=ExtResource("14_ykd8y")]
layout_mode = 2
text = "Exit"

[connection signal="coins_updated" from="Player" to="." method="display_coins"]
[connection signal="player_death" from="Player" to="." method="_on_end_level"]
[connection signal="player_death" from="Player" to="Sounds/snd_Music" method="_on_player_player_death"]
[connection signal="click_end" from="GUILayer/GUI/PausePanel/CenterContainer/FlowContainer/btn_resume" to="GUILayer/GUI/PausePanel" method="_on_btn_resume_click_end"]
[connection signal="click_end" from="GUILayer/GUI/PausePanel/CenterContainer/FlowContainer/btn_restart" to="GUILayer/GUI/PausePanel" method="_on_btn_restart_click_end"]
[connection signal="click_end" from="GUILayer/GUI/PausePanel/CenterContainer/FlowContainer/btn_exit" to="GUILayer/GUI/PausePanel" method="_on_btn_exit_click_end"]
